updated texts and fixed warning message left arrow alignment

--- a/qencode5-portal/css/q5.css
+++ b/qencode5-portal/css/q5.css
@@ -1151,11 +1151,15 @@ input[type=text], input[type=password], input[type=tel], textarea {
     box-sizing: border-box;
     width: 0;
     height: 0;
-    top: 1.4vw;
+
     left: -0.6vw;
     border-top: 0.7vw solid transparent;
     border-bottom: 0.7vw solid transparent;
     border-right: 10px solid #eeeeee;
+
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);    
 }
 
 .q5-input-label-with-help{
